#tell what to compile, what to run, dependencies - like springboot: run but explicit
java_binary(
    name = "access-order-service",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = glob(["src/main/resources/**"], allow_empty = True),
    main_class = "com.example.accessorder.Application",
    deps = [
        "@maven//:org_springframework_boot_spring_boot",
        "@maven//:org_springframework_boot_spring_boot_autoconfigure",
        "@maven//:org_springframework_boot_spring_boot_starter_web",
        "@maven//:org_springframework_boot_spring_boot_starter_data_jpa",
        "@maven//:org_springframework_data_spring_data_jpa",
        "@maven//:jakarta_persistence_jakarta_persistence_api",
        "@maven//:com_h2database_h2",
        "@maven//:org_springframework_spring_context",
        "@maven//:org_springframework_spring_tx",
        "@maven//:org_springframework_spring_web",
        "@maven//:io_temporal_temporal_sdk",
        "@maven//:io_temporal_temporal_serviceclient",
    ]
)